--- a/TnTComponents/Styles/Components/forms/_textbox.scss
+++ b/TnTComponents/Styles/Components/forms/_textbox.scss
@@ -120,6 +120,10 @@
         box-shadow: 0 1px 0 0;
     }
 
+    i {
+        border-radius: 100%;
+    }
+
     & > .tnt-input-field-label {
         position: absolute;
         padding: 0px .5rem 0px .5rem;
