--- a/TnTComponents/Common/TnTExternalClickHandler.razor
+++ b/TnTComponents/Common/TnTExternalClickHandler.razor
@@ -1,5 +1,5 @@
 ﻿@implements IDisposable
 @inherits TnTBaseComponent
-<div @ref="_externalClickElement" class="@GetClass()">
+<div @ref="_externalClickElement" class="@GetCssClass()">
     @ChildContent
 </div>
