--- a/TnTComponents/Forms/TnTFormField.razor
+++ b/TnTComponents/Forms/TnTFormField.razor
@@ -1,7 +1,7 @@
 ﻿@inherits TnTIconComponent
 @typeparam TInputType
 
-<div class="@GetClass()" theme="@Theme">
+<div class="@GetCssClass()" theme="@Theme">
     @GetIcon()
     <input type="@InputType"
            disabled="@Disable"
