--- a/TnTComponents/TnTSideBarListItem.razor
+++ b/TnTComponents/TnTSideBarListItem.razor
@@ -1,6 +1,6 @@
 ﻿@inherits TnTIconComponent
 
-<li class="@GetClass()">
+<li class="@GetCssClass()">
     <NavLink href="@Href">
         @GetIcon()
         @ChildContent
