--- a/TnTComponents/Forms/TnTCheckbox.razor
+++ b/TnTComponents/Forms/TnTCheckbox.razor
@@ -1,7 +1,7 @@
 ﻿@inherits TnTFormField<bool>
 
 
-<div class="@GetClass()" theme="@Theme">
+<div class="@GetCssClass()" theme="@Theme">
     <input type="@InputType"
            disabled="@Disable"
            checked="@Value"
