--- a/TnTComponents/Forms/TnTSwitch.razor
+++ b/TnTComponents/Forms/TnTSwitch.razor
@@ -1,6 +1,6 @@
 ﻿@inherits TnTCheckbox
 
-<div class="@GetClass()" theme="@Theme" @onclick="Toggle">
+<div class="@GetCssClass()" theme="@Theme" @onclick="Toggle">
     <input type="@InputType"
            disabled="@Disable"
            checked="@Value"
