--- a/TnTComponents/Styles/Components/forms/_textbox.scss
+++ b/TnTComponents/Styles/Components/forms/_textbox.scss
@@ -210,3 +210,290 @@
         transform: translateY(-1rem);
     }
 }
+
+
+.tnt-form-field[theme=default] {
+    border-bottom-color: $tnt-color-outline;
+
+    ::placeholder {
+        color: color.adjust($tnt-color-on-surface, $alpha: -0.6);
+    }
+
+    &:not(.disabled) {
+        i:not(.tnt-icon-component) {
+            color: $tnt-color-on-surface;
+            @include colorizeTransparent($tnt-color-surface, $hover:true, $active:true);
+        }
+    }
+
+    input {
+        color: $tnt-color-on-surface;
+    }
+
+    & > .tnt-form-field-label {
+        color: $tnt-color-on-primary-container;
+    }
+
+    i {
+        color: $tnt-color-on-surface;
+    }
+
+    &.modified.invalid:not(.active) {
+        border-bottom-color: $tnt-color-error;
+
+        & > .tnt-form-field-label {
+            color: $tnt-color-error;
+        }
+
+        &.disabled {
+            border-bottom-color: color.adjust($tnt-color-error, $alpha: -0.6);
+
+            & > .tnt-form-field-label {
+                color: color.adjust($tnt-color-error, $alpha: -0.6);
+            }
+        }
+
+        &.outlined {
+            border-color: $tnt-color-error;
+            background-color: $tnt-color-error-container;
+
+            & > .tnt-form-field-label {
+                background-color: $tnt-color-error-container;
+                color: $tnt-color-on-error-container;
+            }
+
+            input {
+                color: $tnt-color-on-error-container;
+            }
+
+            &.disabled {
+                border-color: color.adjust($tnt-color-error, $alpha: -0.6);
+                background-color: color.adjust($tnt-color-error-container, $lightness: -20%);
+
+                & > .tnt-form-field-label {
+                    background-color: color.adjust($tnt-color-error-container, $lightness: -20%);
+                    color: color.adjust($tnt-color-on-error-container, $alpha: -0.6);
+                }
+
+                input {
+                    color: color.adjust($tnt-color-on-error-container, $alpha: -0.6);
+                }
+            }
+        }
+
+        &.filled {
+            background-color: $tnt-color-error-container;
+
+            input {
+                color: $tnt-color-on-error-container;
+            }
+
+            &.disabled {
+                background-color: color.adjust($tnt-color-error-container, $alpha: -0.6);
+
+                input {
+                    color: color.adjust($tnt-color-on-error-container, $alpha: -0.6);
+                }
+            }
+        }
+    }
+
+    &.disabled {
+        border-bottom-color: color.adjust($tnt-color-outline, $alpha: -0.6);
+
+        i, input, > .tnt-form-field-label {
+            color: color.adjust($tnt-color-on-primary-container, $alpha: -0.6);
+        }
+    }
+
+    &.active {
+        border-bottom-color: $tnt-color-primary;
+        box-shadow: 0 1px 0 0 $tnt-color-primary;
+
+        &.outlined {
+            border-color: $tnt-color-primary;
+            box-shadow: 0 0 1px 1px $tnt-color-primary;
+        }
+
+        & > .tnt-form-field-label {
+            &.active {
+                color: $tnt-color-primary;
+            }
+        }
+    }
+
+
+    &.outlined {
+        border-color: $tnt-color-outline;
+
+        & > .tnt-form-field-label {
+            background-color: $tnt-color-surface;
+        }
+
+        &.disabled {
+            border-color: color.adjust($tnt-color-outline, $alpha: -0.7);
+        }
+    }
+
+    &.filled {
+        background-color: $tnt-color-primary-container;
+
+        i, input {
+            color: $tnt-color-on-primary-container;
+        }
+
+        &.disabled {
+            background-color: color.adjust($tnt-color-primary-container, $alpha: -0.6);
+
+            i, input {
+                color: color.adjust($tnt-color-on-primary-container, $alpha: -0.6);
+            }
+        }
+    }
+
+    .tnt-password-reveal {
+        @include colorizeTransparent($tnt-color-on-surface, $hover:true, $active:true);
+    }
+}
+
+.tnt-form-field-message[theme=default] {
+    color: $tnt-color-error;
+
+    &.disabled {
+        color: color.adjust($tnt-color-error, $alpha: -0.6);
+    }
+}
+
+.tnt-form-field {
+    position: relative;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    padding: 0px .5rem 0px .5rem;
+    margin: 1rem 0 .1rem 0;
+    transition: 150ms ease-in-out;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    input {
+        background-color: transparent;
+        border: none;
+        height: 2rem;
+        font-size: 1rem;
+        width: 100%;
+        box-shadow: none;
+        box-sizing: content-box;
+
+        @extend .tnt-border-radius-0;
+
+        &:focus {
+            outline: none;
+        }
+    }
+
+    &.disabled:hover {
+        box-shadow: none;
+    }
+
+    &:hover {
+        box-shadow: 0 1px 0 0;
+    }
+
+    i {
+        border-radius: 100%;
+    }
+
+    & > .tnt-form-field-label {
+        position: absolute;
+        padding: 0px .5rem 0px .5rem;
+        top: 0;
+        left: 0;
+        text-align: initial;
+        cursor: text;
+        transition: transform 150ms ease-in-out, color 150ms ease-in-out;
+        transform-origin: 0% 100%;
+        transform: translateY(0.6rem);
+        user-select: none;
+        cursor: inherit;
+
+        &.active, &.dont-inline {
+            transform: translateY(-.7rem) scale(.75);
+            transform-origin: 0 0;
+        }
+    }
+
+    &.outlined {
+        border: none;
+        border-style: solid;
+        border-width: 1px;
+        @extend .tnt-border-radius-1;
+
+        &.disabled:hover {
+            box-shadow: none;
+        }
+
+        &:hover {
+            box-shadow: 0 0 1px 1px;
+        }
+
+        & > .tnt-form-field-label {
+            padding: 0 10px 0 10px;
+            transform: translateY(0.5rem);
+
+            &.active, &.dont-inline {
+                transform: translateY(-.5rem) translateX(.2rem) scale(.75);
+            }
+        }
+    }
+
+    &.filled {
+        padding-top: .75rem;
+        @extend .tnt-border-radius-1;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+
+        & > .tnt-form-field-label {
+            transform: translateY(1rem);
+
+            &.active, &.dont-inline {
+                transform: translateY(.2rem) translateX(.2rem) scale(.75);
+            }
+        }
+    }
+
+    .tnt-password-reveal {
+        visibility: hidden;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        padding: 0;
+
+        & > i {
+            font-size: 1.5rem;
+        }
+    }
+
+    &.disabled:hover .tnt-password-reveal {
+        visibility: hidden;
+    }
+
+    &:hover .tnt-password-reveal {
+        visibility: visible;
+    }
+
+    + .helper-text {
+        font-size: .8rem;
+        padding-left: 1rem;
+        transform: translateY(-1rem);
+    }
+}
+
+.tnt-form-field-message {
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-top: 0.2rem;
+    margin-left: 0.5rem;
+    transition: 150ms;
+}
