--- a/TnTComponents/TnTCard.razor
+++ b/TnTComponents/TnTCard.razor
@@ -1,6 +1,6 @@
 ﻿@inherits TnTBaseComponent
 
-<div class="@GetClass()" theme="@Theme">
+<div class="@GetCssClass()" theme="@Theme">
     @ChildContent
 </div>
 
@@ -16,8 +16,8 @@
     public override string BaseCssClass { get; set; } = "tnt-card";
 
 
-    protected override string GetClass() {
-        return $"{base.GetClass()} {GetCardType()}";
+    protected override string GetCssClass() {
+        return $"{base.GetCssClass()} {GetCardType()}";
     }
 
     private string GetCardType() {
